# high-trust-renderer

./: .gitignore  CONTRIBUTING.md  PUBLISHING_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ps2ambientvideo/: __init__.py  audio.py  blender_backend.py  cli.py  contact_sheet.py  mode_manifest.py  palettes.py  ps2fx.py  renderer.py  softbodies_backend.py  timeline.py  variant_specs.py  worlds_grammar.py
ps2ambientvideo/modes/: __init__.py  _factory.py  airport_at_night.py  arcology_exterior.py  base.py  bios_temple.py  blue_os_desktop_world.py  corporate_fountain_core.py  crt_navigation_map.py  crystal_server_lake.py  cyber_shrine.py  data_center_dream.py  digital_aquarium.py  dream_arcade_floor.py  dream_metro.py  dream_office_lobby.py  endless_highway.py  fractal_parking_garage.py  glass_mall_atrium.py  green_wireframe_valley.py  hologram_market.py  liquid_chrome_room.py  memory_beach.py  memory_train.py  moon_pool.py  neon_monorail.py  neon_rain_alley.py  ocean_interface.py  polygon_garden.py  ring_corridor.py  rooftop_antenna_field.py  satellite_weather_map.py  skybridge_city.py  soft_geometry_field.py  solar_sail_space.py  submerged_city.py  tunnel_of_screens.py  vapor_plaza.py  virtual_hotel.py  weather_simulation_room.py
ps2ambientvideo/softbodies_engine/: __init__.py  audio_analysis.py  experimental_scene.py  gummy_object.py  preview.py  procedural_course.py  render_video.py  (+6 more)
scripts/: blender_minimal_diag.py  check_blender_proof_quality.py
tests/: test_mode_catalog.py  test_softbodies_backend.py  test_visual_smoke.py
(+12 files in other folders)
